[metadata]
name = 'microblogcli'
version = '0.0.1'
description = ''
author = 'Andrew Henry'
author_email = 'andymitchhank@users.noreply.github.com'
license = 'MIT'
url = 'https://github.com/_/microblogcli'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
